# EfficientN_Model

./: Cargo.toml  README.md  code.md 
data_clean/data1/: plasmodium-0003.jpg.json  plasmodium-0008.jpg.json  plasmodium-0013.jpg.json  plasmodium-0014.jpg.json  plasmodium-0017.jpg.json  plasmodium-0033.jpg.json  plasmodium-0034.jpg.json  plasmodium-0045.jpg.json  plasmodium-0047.jpg.json  plasmodium-0052.jpg.json  plasmodium-0053.jpg.json  plasmodium-0055.jpg.json  plasmodium-0066.jpg.json  plasmodium-0073.jpg.json  plasmodium-0083.jpg.json  plasmodium-0089.jpg.json  plasmodium-0095.jpg.json  plasmodium-0098.jpg.json  plasmodium-0101.jpg.json  plasmodium-0106.jpg.json  plasmodium-0107.jpg.json  plasmodium-0119.jpg.json  plasmodium-0121.jpg.json  plasmodium-0122.jpg.json  plasmodium-0132.jpg.json  plasmodium-0133.jpg.json  plasmodium-0136.jpg.json  plasmodium-0138.jpg.json  plasmodium-0148.jpg.json  plasmodium-0156.jpg.json  plasmodium-0160.jpg.json  plasmodium-0168.jpg.json  plasmodium-0172.jpg.json  plasmodium-0182.jpg.json  plasmodium-0184.jpg.json  plasmodium-0190.jpg.json  plasmodium-0198.jpg.json  plasmodium-0201.jpg.json  plasmodium-0208.jpg.json  plasmodium-0211.jpg.json  (+339 more)
data_clean/data2/: 1305121398-0004-R.jpg.json  1305121398-0005-T.jpg.json  1305121398-0007-R.jpg.json  1305121398-0008-R.jpg.json  1305121398-0010-S.jpg.json  1305121398-0013-S.jpg.json  1305121398-0014-S.jpg.json  1305121398-0015-S.jpg.json  1305121398-0016-S.jpg.json  1305121398-0017-R.jpg.json  (+127 more)
src/: config.rs  data.rs  efficientnet.rs  heads.rs  main.rs  malaria_model.rs  training.rs
(+1169 files in other folders)
